--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "pgvector/pgvector": "^0.2.0"
+        "pgvector/pgvector": "^0.2.2",
+        "smalot/pdfparser": "^2.11",
+        "spatie/pdf-to-text": "^1.54",
+        "thiagoalessio/tesseract_ocr": "^2.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
